--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <body>
   <main>
     <div id="message">
-      <h1>Siempre supe que dirias que sí <br>♥</h1>
+      <h1>En la adversidad, algunos se derrumban, otros se vuelven más fuertes. Tú eres de los fuertes.<br>♥</h1>
+      <h1> No tite porfa <3 </h1>
       <img src="./assets/dino_love_2.webp" width="250" alt="Dino Love">
     </div>
     <img src="./assets/dino_love.webp" width="250" alt="Dino Love">
-    <h1>¿Quieres ser mi San Valentín?</h1>
+    <h1>¿Tefa sigue tite?</h1>
     <div class="options">
       <button id="yes">Si</button>
       <button id="no">No</button>
