--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <img src="./assets/dino_love.webp" width="250" alt="Dino Love">
     <h1>¿Tefa sigue tite?</h1>
     <div class="options">
-      <button id="yes">Si</button>
-      <button id="no">No</button>
+      <button id="yes">No</button>
+      <button id="no">Si</button>
     </div>
   </main>
 
