--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>tefa</title>
+  <title>Dino amor </title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,7 +12,7 @@
   <main>
     <div id="message">
       <h1>En la adversidad, algunos se derrumban, otros se vuelven más fuertes. Tú eres de los fuertes.<br>♥</h1>
-      <h1> No tite porfa el dino te manda un abrazo girrrrrrrrrrrrrrrrrr <3 </h1>
+      <h1> No tite porfa el dino amor te manda un abrazo girrrrrrrrrrrrrrrrrr <3 </h1>
       <img src="./assets/dino_love_2.webp" width="250" alt="Dino Love">
     </div>
     <img src="./assets/dino_love.webp" width="250" alt="Dino Love">
