--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <main>
     <div id="message">
-      <h1>En la adversidad, algunos se derrumban, otros se vuelven más fuertes. Tú eres de los fuertes.<br>♥</h1>
-      <h1> No tite porfa el dino amor te manda un abrazo girrrrrrrrrrrrrrrrrr <3 </h1>
+      <h1>Cree en ti mismo y en todo lo que eres. Sé consciente de que hay algo dentro de ti que es más grande que cualquier obstáculo.<br>♥</h1>
+      <h1> El dino amor te manda un abrazo girrrrrrrrrrrrrrrrrr, ¿Me regalas una sonrisa? <3 </h1>
       <img src="./assets/dino_love_2.webp" width="250" alt="Dino Love">
     </div>
     <img src="./assets/dino_love.webp" width="250" alt="Dino Love">
