--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
   <main>
     <div id="message">
-      <h1>Cree en ti mismo y en todo lo que eres. Sé consciente de que hay algo dentro de ti que es más grande que cualquier obstáculo.<br>♥</h1>
+      <h1>No dejes que las dificultades de hoy apaguen tu luz. ¡Eres increíble y capaz de lograr todo lo que te propongas¡.<br>♥</h1>
       <h1> El dino amor te manda un abrazo girrrrrrrrrrrrrrrrrr, ¿Me regalas una sonrisa? <3 </h1>
       <img src="./assets/dino_love_2.webp" width="250" alt="Dino Love">
     </div>
     <img src="./assets/dino_love.webp" width="250" alt="Dino Love">
-    <h1>¿Diana sigue tite?</h1>
+    <h1>¿Diana no tuvo un buen día verdad?</h1>
     <div class="options">
       <button id="yes">No</button>
       <button id="no">Si</button>
