--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <img src="./assets/dino_love_2.webp" width="250" alt="Dino Love">
     </div>
     <img src="./assets/dino_love.webp" width="250" alt="Dino Love">
-    <h1>¿Diana no tuvo un buen día verdad?</h1>
+    <h1>¿Dome no tuvo un buen día verdad?</h1>
     <div class="options">
       <button id="yes">No</button>
       <button id="no">Si</button>
